crates/anchor-litesvm-derive/tests/compile_fail/instruction_name_mismatch.stderr
error[E0433]: cannot find module or crate `borsh` in this scope
  --> tests/compile_fail/instruction_name_mismatch.rs:35:14
   |
35 |     #[derive(anchor_lang::AnchorSerialize, anchor_lang::AnchorDeserialize)]
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `borsh`
   |
   = help: if you wanted to use a crate named `borsh`, use `cargo add borsh` to add it to your `Cargo.toml`
   = note: this error originates in the derive macro `anchor_lang::AnchorSerialize` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0433]: cannot find module or crate `borsh` in this scope
  --> tests/compile_fail/instruction_name_mismatch.rs:35:44
   |
35 |     #[derive(anchor_lang::AnchorSerialize, anchor_lang::AnchorDeserialize)]
   |                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `borsh`
   |
   = help: if you wanted to use a crate named `borsh`, use `cargo add borsh` to add it to your `Cargo.toml`
   = note: this error originates in the derive macro `anchor_lang::AnchorDeserialize` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0433]: cannot find module or crate `borsh` in this scope
  --> tests/compile_fail/instruction_name_mismatch.rs:35:14
   |
35 |     #[derive(anchor_lang::AnchorSerialize, anchor_lang::AnchorDeserialize)]
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `borsh`
   |
   = help: if you wanted to use a crate named `borsh`, use `cargo add borsh` to add it to your `Cargo.toml`
   = note: this error originates in the derive macro `anchor_lang::AnchorSerialize` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing one of these modules
   |
35 +     use std::io;
   |
35 +     use std::os::unix::io;
   |

error[E0433]: cannot find module or crate `borsh` in this scope
  --> tests/compile_fail/instruction_name_mismatch.rs:35:14
   |
35 |     #[derive(anchor_lang::AnchorSerialize, anchor_lang::AnchorDeserialize)]
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `borsh`
   |
   = help: if you wanted to use a crate named `borsh`, use `cargo add borsh` to add it to your `Cargo.toml`
   = note: this error originates in the derive macro `anchor_lang::AnchorSerialize` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this module
   |
35 +     use std::io;
   |

error[E0433]: cannot find module or crate `borsh` in this scope
  --> tests/compile_fail/instruction_name_mismatch.rs:35:44
   |
35 |     #[derive(anchor_lang::AnchorSerialize, anchor_lang::AnchorDeserialize)]
   |                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `borsh`
   |
   = help: if you wanted to use a crate named `borsh`, use `cargo add borsh` to add it to your `Cargo.toml`
   = note: this error originates in the derive macro `anchor_lang::AnchorDeserialize` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this module
   |
35 +     use std::io;
   |

error[E0425]: cannot find type `InitPoll` in module `crate::instruction`
  --> tests/compile_fail/instruction_name_mismatch.rs:53:12
   |
53 | pub struct InitPoll<'info> {
   |            ^^^^^^^^ not found in `crate::instruction`
   |
help: consider importing this struct
   |
12 + use crate::accounts::InitPoll;
   |

error[E0277]: the trait bound `InitializePoll: AnchorSerialize` is not satisfied
  --> tests/compile_fail/instruction_name_mismatch.rs:40:43
   |
40 |     impl anchor_lang::InstructionData for InitializePoll {}
   |                                           ^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `AnchorSerialize` is not implemented for `InitializePoll`
  --> tests/compile_fail/instruction_name_mismatch.rs:36:5
   |
36 |     pub struct InitializePoll {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^
note: there are multiple different versions of crate `borsh` in the dependency graph
  --> $CARGO/borsh-$VERSION/src/ser/mod.rs
   |
   | pub trait BorshSerialize {
   | ^^^^^^^^^^^^^^^^^^^^^^^^ this is the expected trait
   |
  ::: $CARGO/borsh-$VERSION/src/ser/mod.rs
   |
   | pub trait BorshSerialize {
   | ------------------------ this is the trait that was imported
   = help: you can use `cargo tree` to explore your dependency tree
   = help: the following other types implement trait `AnchorSerialize`:
             &T
             ()
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
             (T0, T1, T2, T3, T4, T5)
             (T0, T1, T2, T3, T4, T5, T6)
           and $N others
note: required by a bound in `InstructionData`
  --> $CARGO/anchor-lang-$VERSION/src/lib.rs
   |
   | pub trait InstructionData: Discriminator + AnchorSerialize {
   |                                            ^^^^^^^^^^^^^^^ required by this bound in `InstructionData`
